app/assets/stylesheets/externals/antd-light.less
.light-theme {
    .ant-layout {
        background: #fefeff;
    }

    .ant-layout-sider-trigger {
        color: #000;
        background: #fff;
        border-right: 1px solid #f0f0f0;

        &:hover {
            color: var(--blue-color);
        }
    }

    .ant-layout-sider-collapsed {
        .ant-layout-sider-trigger {
            color: var(--blue-color);
            background: var(--primary-light-color);
        }
    }

    // Fix button color
    .ant-btn:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
    .ant-btn:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
        color: var(--primary-btn-hover-color);
        border-color: var(--primary-btn-hover-color);
    }

    .ant-btn.ant-btn-primary:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
    .ant-btn.ant-btn-primary:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
    .ant-tag-checkable-checked:hover {
        color: #fff;
        background: var(--primary-btn-hover-color);
        border-color: var(--primary-btn-hover-color);
    }

    .ant-btn-primary,
    .ant-tag-checkable-checked {
        color: #fff;
        background: var(--primary-btn-color);
        border-color: var(--primary-btn-color);
    }

    .ant-btn.ant-btn-primary.ant-btn-background-ghost {
        color: var(--primary-btn-color);
        border-color: var(--primary-btn-color);
    }

    .ant-btn.ant-btn-primary.ant-btn-background-ghost:hover:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled),
    .ant-btn.ant-btn-primary.ant-btn-background-ghost:focus:not(.ant-btn-dangerous):not(.ant-btn-danger):not(:disabled) {
        color: var(--primary-btn-hover-color);
        background: var(--primary-btn-hover-color);
        border-color: var(--primary-btn-hover-color);
    }
}

